--- a/be/docker-compose.yml
+++ b/be/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "8000:8000"
     depends_on:
       - mongo
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/yolofarm
+    env_file:
+      - .env  # 📌 Đọc biến môi trường từ file .env
     volumes:
       - .:/app
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
@@ -20,13 +20,14 @@ services:
     restart: always
     ports:
       - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: yolofarm
+    env_file:
+      - .env  # 📌 Đọc biến môi trường từ file .env
     volumes:
       - mongo_data:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      - MONGO_INITDB_DATABASE=${DB_NAME}
 
 volumes:
   mongo_data:
-
