--- a/be/docker-compose.yml
+++ b/be/docker-compose.yml
@@ -23,7 +23,8 @@ services:
     env_file:
       - .env  # 📌 Đọc biến môi trường từ file .env
     volumes:
-      - mongo_data:/data/db
+      - mongo_data:/data/db             
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
