--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -1,6 +1,9 @@
 # Sử dụng Python 3.11
 FROM python:3.11
 
+# Tắt buffer để log hiện ngay trong Docker logs
+ENV PYTHONUNBUFFERED=1
+
 # Đặt thư mục làm việc trong container
 WORKDIR /app
 
@@ -10,12 +13,8 @@ COPY . .
 # Cài đặt thư viện từ requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-
 # Expose cổng 8000 để truy cập API
 EXPOSE 8000
 
 # Chạy ứng dụng FastAPI với Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
-
-
-
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
